# evops-ml

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  dev.Dockerfile  hmr.Dockerfile  prod.Dockerfile  requirements.txt
core/: auto-tagging.py  auto_tagging.py  event_embedder.py  profile-builder.py  pyproject.toml  recommendation-system.py  translator.py
notebooks/Inference_Optimization/: 1_Tagger.ipynb  2_RecSys.ipynb
notebooks/Machine_Translation/: 1_ArgosTranslate.ipynb  2_LLM.ipynb  docker-compose.yml  env_parameters.md
notebooks/Message_Tagging/: 1_Data_Preprocessing.ipynb  2_Tags_Extraction.ipynb  3_Automatic_Tags_Assignment.ipynb  4_Recommendation_System.ipynb
notebooks/Message_Tagging/data/: o4u_messages_Jun_07_2025.json
notebooks/Recommendation_System/: 1_Recommendation_System.ipynb  2.2_Models_evaluation.ipynb
notebooks/data/: o4u_preprocessed_messages_Jun_07_2025.json
server/: .taplo.toml  Cargo.toml  bacon.toml  build.rs
server/src/: config.rs  main.rs  pb.rs  py_utils.rs  service.rs  shutdown.rs
server/src/py_utils/: add_path.py
server/src/service/: auto_tags.rs
